# thoughts

./: Cargo.toml  testa  testaa  thoughts.toml
src/: cli.rs  config.rs  database.rs  editor.rs  filesystem.rs  input.rs  main.rs  search.rs  sql.rs  tui.rs  util.rs
