[package]
name = "thoughts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ratatui = "0.20.1"
crossterm = "0.26.1"
unicode-width = "0.1.10"
chrono = "0.4.24"
rusqlite = "0.29.0"
clap = { version = "4.2.7", features = ["derive"]}
figment = { version = "0.10", features = ["toml"] }
serde = { version = "1.0.163", features = ["derive"]}
shellexpand = "3.1.0"
toml = "0.4.2"
glob = "0.3.1"
