[package]
name = "thoughts"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0" }
figment = { version = "0.10.19", features = ["toml", "env"] }
glob = "0.3.2"
iocraft = "0.6.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.34"
shellexpand = "3.1.0"
tokio = { version = "1.43.0", features = ["full"] }
toml = "0.8.20"
walkdir = "2.5.0"
